--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="tab-content">
           <div class="tab-pane active" id="original-tab">
             <h2 class="preview-title">Original Video</h2>
-            <video id="previewVideo" controls>
+            <video id="originalVideo" controls>
               Your browser does not support the video tag.
             </video>
           </div>
